@@ -87,3 +87,6 @@
 
 # Enable cron
 # cron = True
+
+# unoconv connection
+#unoconv = pipe,name=trytond;urp;StarOffice.ComponentContext
